# people_detector

people_perception/scripts/: recognition_to_3d_face_detections
people_perception_msgs/: CMakeLists.txt  package.xml
people_perception_msgs/msg/: FaceDetection.msg  FaceDetections.msg  People.msg  Person.msg
scripts/: people_detector
