<?xml version="1.0"?>
<package format="2">
  <name>people_perception_msgs</name>
  <version>0.0.0</version>
  <description>The people_perception_msgs package</description>

  <maintainer email="rokus@ruvu.nl">Rokus Ottervanger</maintainer>

  <license>MIT</license>

  <author email="rokus@ruvu.nl">Rokus Ottervanger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  
</package>
